<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateItemPostActivity">


<!--    <android.support.v7.widget.RecyclerView-->
<!--        android:id="@+id/list"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->


    <TextView
        android:id="@+id/create_post_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create a Post"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="240dp"

        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/create_post_title"
        tools:layout_editor_absoluteX="0dp"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/choose_image_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="Upload Image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view" />


    <EditText
        android:id="@+id/post_title"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/post_title_hint"
        android:inputType="textCapSentences|textAutoCorrect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_image_btn" />

    <EditText
        android:id="@+id/post_item_price"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:hint="Price"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toRightOf="@+id/post_title"
        app:layout_constraintTop_toBottomOf="@+id/choose_image_btn" />

    <EditText
        android:id="@+id/post_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Add Some Tags (separated by commas)"

        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/post_item_price" />

    <EditText
        android:id="@+id/post_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:hint="@string/post_description_hint"
        android:inputType="textCapSentences|textMultiLine|textAutoCorrect"

        android:maxLength="2000"
        android:maxLines="4"
        app:layout_constraintTop_toBottomOf="@+id/post_tags" />

    <Button
        android:id="@+id/create_post_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/create_post_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#008577"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/item_choices"
        tools:layout_editor_absoluteX="0dp" />
    <include
        android:id="@+id/create_item_include"
        layout="@layout/bottom_nav"
        tools:layout_editor_absoluteY="675dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>