<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExploreActivity">

    <TextView
        android:id="@+id/title_explore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explore_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/spinner_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="16dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/filter_val"
        app:layout_constraintEnd_toStartOf="@+id/filter_val"
        app:layout_constraintTop_toTopOf="@+id/apply_filter" />

    <Spinner
        android:id="@+id/spinner_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxWidth="16dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/apply_sort"
        app:layout_constraintEnd_toStartOf="@+id/apply_sort"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_filter"
        app:layout_constraintVertical_bias="0.678" />

    <include
    android:id="@+id/explore_include"
    layout="@layout/bottom_nav"
    tools:layout_editor_absoluteY="675dp"/>

    <GridView
        android:id="@+id/explore_grid"
        android:layout_width="400dp"
        android:layout_height="500dp"
        android:background="@drawable/grid_border"
        android:numColumns="3"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/explore_include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_sort"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/apply_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="setFilter"
        android:text="@string/filter_button"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_explore" />

    <Button
        android:id="@+id/ViewMap"
        android:layout_width="76dp"
        android:layout_height="57dp"
        android:layout_marginTop="256dp"
        android:layout_marginBottom="8dp"
        android:text="View Map"
        app:layout_constraintBottom_toTopOf="@+id/explore_grid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Description" />

    <Button
        android:id="@+id/apply_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setSort"
        android:text="@string/sort_button"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/apply_filter"
        app:layout_constraintTop_toBottomOf="@+id/apply_filter" />

    <EditText
        android:id="@+id/filter_val"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:ems="20"
        android:hint="@string/filter_placeholder"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/apply_sort"
        app:layout_constraintEnd_toStartOf="@+id/apply_filter"
        app:layout_constraintTop_toTopOf="@+id/apply_filter"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>